--- a/src/scss/CRMEntity.scss
+++ b/src/scss/CRMEntity.scss
@@ -32,7 +32,9 @@
     padding-top: 20px;
     padding-bottom: 20px;
   }
-
+  .information__container {
+    margin-left: 30px;
+  }
   .information--item {
     display: flex;
     height: 25px;
