--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -174,7 +174,7 @@ ul {
   .modal-body > form > div {
     position: relative;
   }
-  .modal-body > form .form-label{
+  .modal-body > form .form-label {
     font-size: 14px;
     margin-bottom: 5px;
   }
@@ -671,4 +671,8 @@ h1 {
 
 .dashboard-page__block .dashboard-page__block-view {
   padding: 0px 10px;
+}
+
+.table-images {
+  cursor: pointer;
 }
