--- a/src/scss/CRMEntity.scss
+++ b/src/scss/CRMEntity.scss
@@ -1,6 +1,14 @@
 @import "./scss-variables.scss";
 
 .entity-page {
+  .entity-information {
+    display: flex;
+    align-items: center;
+  }
+  .entity-name__container {
+    margin-right: 30px;
+    width: 20%;
+  }
   &--header {
     width: 100%;
     padding-top: 10px;
@@ -16,30 +24,45 @@
   }
 
   &--img {
-    width: 100%;
-    height: 100%;
+    width: 105px;
+    max-height: 95px;
   }
 
   .main-img--container {
     position: relative;
     z-index: 2;
-    width: 105px;
-    height: 90px;
-    margin-right: 15px;
+    margin-right: 45px;
   }
 
   .page--information {
     padding-top: 20px;
     padding-bottom: 20px;
   }
+
   .information__container {
-    margin-left: 30px;
+    position: relative;
+    max-width: 400px;
+
+    &::before {
+      content: "";
+      position: absolute;
+      background: black;
+      width: 1px;
+      height: 100px;
+      left: -10px;
+      top: 50%;
+      transform: translateY(-50%);
+    }
   }
   .information--item {
-    display: flex;
-    height: 25px;
-    &:not(:last-child) {
-      margin-bottom: 5px;
+    margin-bottom: 20px;
+    margin-right: 50px;
+    .field-name {
+      padding: 8px;
+      border-radius: 5px;
+      background-color: $default;
+      margin-right: 5px;
+      font-weight: 500;
     }
     .ui-kit__badge {
       width: fit-content;
@@ -72,7 +95,8 @@
   .information--list {
     display: flex;
     flex-wrap: wrap;
-    flex-direction: column;
+    margin-bottom: -20px;
+    margin-right: -20px;
   }
   .not-found-banner {
     width: auto;
