--- a/src/pages/ComertialPurpose/ComertialPurposePrint.scss
+++ b/src/pages/ComertialPurpose/ComertialPurposePrint.scss
@@ -55,9 +55,10 @@
         textarea {
             margin-bottom: 10px;
         }
-        
+
         input {
             text-align: right;
+            border: 1px solid black;
         }
     }
 
