--- a/src/pages/ComertialPurpose/ComertialPurpose.scss
+++ b/src/pages/ComertialPurpose/ComertialPurpose.scss
@@ -7,12 +7,12 @@
         margin-bottom: 0;
     }
 
-    .table-striped input {  
+    .table-striped input {
         background-color: transparent;
+        border: 1px solid black;
     }
 
     input, textarea {
-        border: none !important;        
         background-color: #fafafa;
         &::placeholder {
             color: #777;
@@ -35,6 +35,7 @@
             max-width: 170px;
             font-size: 20px;
             font-weight: 700;
+            border: 1px solid black;
         }
     }
 
@@ -74,7 +75,7 @@
         display: flex;
         justify-content: end;
         margin-left: auto;
-        
+
         button {
             padding: 5px 10px;
         }
